simplify props-table api

--- a/apps/docs/app/(docs)/components/alert-dialog/page.mdx
+++ b/apps/docs/app/(docs)/components/alert-dialog/page.mdx
@@ -1,6 +1,6 @@
 import { Cards } from "@/components/cards";
 import { Demo } from "@/components/demo";
-import { components, PropsTable } from "@/components/props-table";
+import { PropsTable } from "@/components/props-table";
 
 # AlertDialog
 
@@ -54,35 +54,35 @@ We can also completely change the trigger by using `asChild` and passing our own
 
 ### AlertDialog
 
-<PropsTable component={components["AlertDialog"]} />
+<PropsTable component="AlertDialog" />
 
 ### AlertDialogTrigger
 
-<PropsTable component={components["AlertDialogTrigger"]} />
+<PropsTable component="AlertDialogTrigger" />
 
 ### AlertDialogContent
 
-<PropsTable component={components["AlertDialogContent"]} />
+<PropsTable component="AlertDialogContent" />
 
 ### AlertDialogHeader
 
-<PropsTable component={components["AlertDialogHeader"]} />
+<PropsTable component="AlertDialogHeader" />
 
 ### AlertDialogBody
 
-<PropsTable component={components["AlertDialogBody"]} />
+<PropsTable component="AlertDialogBody" />
 
 ### AlertDialogFooter
 
-<PropsTable component={components["AlertDialogFooter"]} />
+<PropsTable component="AlertDialogFooter" />
 
 ### AlertDialogCancel
 
-<PropsTable component={components["AlertDialogCancel"]} />
+<PropsTable component="AlertDialogCancel" />
 
 ### AlertDialogAction
 
-<PropsTable component={components["AlertDialogAction"]} />
+<PropsTable component="AlertDialogAction" />
 
 ## Changelog
 
