--- a/apps/docs/app/(docs)/components/alert/page.mdx
+++ b/apps/docs/app/(docs)/components/alert/page.mdx
@@ -1,6 +1,6 @@
 import { Cards } from "@/components/cards";
 import { Demo } from "@/components/demo";
-import { components, PropsTable } from "@/components/props-table";
+import { PropsTable } from "@/components/props-table";
 import { Alert } from "@optiaxiom/react";
 
 # Alert
@@ -33,7 +33,7 @@ Use the `onDismiss` prop to show a close button to the top right of the alert.
 
 ### Alert
 
-<PropsTable component={components["Alert"]} />
+<PropsTable component="Alert" />
 
 ## Changelog
 
