--- a/apps/docs/app/(docs)/components/autocomplete/page.mdx
+++ b/apps/docs/app/(docs)/components/autocomplete/page.mdx
@@ -1,6 +1,6 @@
 import { Cards } from "@/components/cards";
 import { Demo } from "@/components/demo";
-import { components, PropsTable } from "@/components/props-table";
+import { PropsTable } from "@/components/props-table";
 
 # Autocomplete
 
@@ -107,15 +107,15 @@ Use the `loading` prop on `AutocompleteContent` to show a loading spinner if the
 
 ### Autocomplete
 
-<PropsTable component={components["Autocomplete"]} />
+<PropsTable component="Autocomplete" />
 ### AutocompleteTrigger
-<PropsTable component={components["AutocompleteTrigger"]} />
+<PropsTable component="AutocompleteTrigger" />
 ### AutocompleteContent
-<PropsTable component={components["AutocompleteContent"]} />
+<PropsTable component="AutocompleteContent" />
 ### AutocompleteRadioItem
-<PropsTable component={components["AutocompleteRadioItem"]} />
+<PropsTable component="AutocompleteRadioItem" />
 ### AutocompleteEmpty
-<PropsTable component={components["AutocompleteEmpty"]} />
+<PropsTable component="AutocompleteEmpty" />
 
 ## Changelog
 
