--- a/apps/docs/app/(docs)/components/avatar/page.mdx
+++ b/apps/docs/app/(docs)/components/avatar/page.mdx
@@ -1,5 +1,5 @@
 import { Demo } from "@/components/demo";
-import { components, PropsTable } from "@/components/props-table";
+import { PropsTable } from "@/components/props-table";
 
 # Avatar
 
@@ -61,11 +61,11 @@ Use the `<AvatarGroup />` component to stack avatars together.
 
 ### Avatar
 
-<PropsTable component={components["Avatar"]} />
+<PropsTable component="Avatar" />
 
 ### AvatarGroup
 
-<PropsTable component={components["AvatarGroup"]} />
+<PropsTable component="AvatarGroup" />
 
 ## Changelog
 
