--- a/apps/docs/app/(docs)/components/axiom-provider/page.mdx
+++ b/apps/docs/app/(docs)/components/axiom-provider/page.mdx
@@ -1,5 +1,5 @@
 import { Cards } from "@/components/cards";
-import { components, PropsTable } from "@/components/props-table";
+import { PropsTable } from "@/components/props-table";
 
 # AxiomProvider
 
@@ -25,7 +25,7 @@ export function App() {
 
 ### AxiomProvider
 
-<PropsTable component={components["AxiomProvider"]} />
+<PropsTable component="AxiomProvider" />
 
 ## Changelog
 
