--- a/apps/docs/app/(docs)/components/badge/page.mdx
+++ b/apps/docs/app/(docs)/components/badge/page.mdx
@@ -1,6 +1,6 @@
 import { Cards } from "@/components/cards";
 import { Demo } from "@/components/demo";
-import { components, PropsTable } from "@/components/props-table";
+import { PropsTable } from "@/components/props-table";
 
 # Badge
 
@@ -32,7 +32,7 @@ Set `asChild` to `true` and wrap children in an `<a>` element to render badge as
 
 ### Badge
 
-<PropsTable component={components["Badge"]} />
+<PropsTable component="Badge" />
 
 ## Changelog
 
