--- a/apps/docs/app/(docs)/components/banner/page.mdx
+++ b/apps/docs/app/(docs)/components/banner/page.mdx
@@ -1,6 +1,6 @@
 import { Cards } from "@/components/cards";
 import { Demo } from "@/components/demo";
-import { components, PropsTable } from "@/components/props-table";
+import { PropsTable } from "@/components/props-table";
 
 # Banner
 
@@ -32,7 +32,7 @@ Use the `onDismiss` prop to show a close button to the top right of the banner.
 
 ### Banner
 
-<PropsTable component={components["Banner"]} />
+<PropsTable component="Banner" />
 
 ## Changelog
 
