--- a/apps/docs/app/(docs)/components/button/page.mdx
+++ b/apps/docs/app/(docs)/components/button/page.mdx
@@ -1,6 +1,6 @@
 import { Cards } from "@/components/cards";
 import { Demo } from "@/components/demo";
-import { components, PropsTable } from "@/components/props-table";
+import { PropsTable } from "@/components/props-table";
 
 # Button
 
@@ -94,11 +94,11 @@ We can create a simple file upload button by rendering the button as a `label` a
 
 ### Button
 
-<PropsTable component={components["Button"]} />
+<PropsTable component="Button" />
 
 ### ButtonGroup
 
-<PropsTable component={components["ButtonGroup"]} />
+<PropsTable component="ButtonGroup" />
 
 ## Changelog
 
