--- a/apps/docs/app/(docs)/components/calendar/page.mdx
+++ b/apps/docs/app/(docs)/components/calendar/page.mdx
@@ -1,5 +1,5 @@
 import { Demo } from "@/components/demo";
-import { components, PropsTable } from "@/components/props-table";
+import { PropsTable } from "@/components/props-table";
 
 # Calendar
 
@@ -15,7 +15,7 @@ Base date picker component.
 
 ### Calendar
 
-<PropsTable component={components["Calendar"]} />
+<PropsTable component="Calendar" />
 
 ## Changelog
 
