--- a/apps/docs/app/(docs)/components/checkbox/page.mdx
+++ b/apps/docs/app/(docs)/components/checkbox/page.mdx
@@ -1,6 +1,6 @@
 import { Cards } from "@/components/cards";
 import { Demo } from "@/components/demo";
-import { components, PropsTable } from "@/components/props-table";
+import { PropsTable } from "@/components/props-table";
 
 # Checkbox
 
@@ -50,7 +50,7 @@ Use the `description` prop to add helper text after the label.
 
 ### Checkbox
 
-<PropsTable component={components["Checkbox"]} />
+<PropsTable component="Checkbox" />
 
 ## Changelog
 
