--- a/apps/docs/app/(docs)/components/code/page.mdx
+++ b/apps/docs/app/(docs)/components/code/page.mdx
@@ -1,5 +1,5 @@
 import { Demo } from "@/components/demo";
-import { components, PropsTable } from "@/components/props-table";
+import { PropsTable } from "@/components/props-table";
 
 # Code
 
@@ -15,7 +15,7 @@ Display inline code.
 
 ### Code
 
-<PropsTable component={components["Code"]} />
+<PropsTable component="Code" />
 
 ## Changelog
 
