--- a/apps/docs/app/(docs)/components/combobox/page.mdx
+++ b/apps/docs/app/(docs)/components/combobox/page.mdx
@@ -1,6 +1,6 @@
 import { Cards } from "@/components/cards";
 import { Demo } from "@/components/demo";
-import { components, PropsTable } from "@/components/props-table";
+import { PropsTable } from "@/components/props-table";
 
 # Combobox
 
@@ -71,33 +71,33 @@ export default () => (
 
 ### Combobox
 
-<PropsTable component={components["Combobox"]} />
+<PropsTable component="Combobox" />
 ### ComboboxTrigger
-<PropsTable component={components["ComboboxTrigger"]} />
+<PropsTable component="ComboboxTrigger" />
 ### ComboboxValue
-<PropsTable component={components["ComboboxValue"]} />
+<PropsTable component="ComboboxValue" />
 ### ComboboxContent
-<PropsTable component={components["ComboboxContent"]} />
+<PropsTable component="ComboboxContent" />
 ### ComboboxInput
-<PropsTable component={components["ComboboxInput"]} />
+<PropsTable component="ComboboxInput" />
 ### ComboboxScrollArea
-<PropsTable component={components["ComboboxScrollArea"]} />
+<PropsTable component="ComboboxScrollArea" />
 ### ComboboxItem
-<PropsTable component={components["ComboboxItem"]} />
+<PropsTable component="ComboboxItem" />
 ### ComboboxCheckboxItem
-<PropsTable component={components["ComboboxCheckboxItem"]} />
+<PropsTable component="ComboboxCheckboxItem" />
 ### ComboboxRadioItem
-<PropsTable component={components["ComboboxRadioItem"]} />
+<PropsTable component="ComboboxRadioItem" />
 ### ComboboxGroup
-<PropsTable component={components["ComboboxGroup"]} />
+<PropsTable component="ComboboxGroup" />
 ### ComboboxLabel
-<PropsTable component={components["ComboboxLabel"]} />
+<PropsTable component="ComboboxLabel" />
 ### ComboboxSeparator
-<PropsTable component={components["ComboboxSeparator"]} />
+<PropsTable component="ComboboxSeparator" />
 ### ComboboxEmpty
-<PropsTable component={components["ComboboxEmpty"]} />
+<PropsTable component="ComboboxEmpty" />
 ### ComboboxFooter
-<PropsTable component={components["ComboboxFooter"]} />
+<PropsTable component="ComboboxFooter" />
 
 ## Changelog
 
