--- a/apps/docs/app/(docs)/components/data-table/page.mdx
+++ b/apps/docs/app/(docs)/components/data-table/page.mdx
@@ -1,6 +1,6 @@
 import { Cards } from "@/components/cards";
 import { Demo } from "@/components/demo";
-import { components, PropsTable } from "@/components/props-table";
+import { PropsTable } from "@/components/props-table";
 
 # DataTable
 
@@ -24,7 +24,7 @@ npm install @tanstack/react-table
 
 ### DataTable
 
-<PropsTable component={components["DataTable"]} />
+<PropsTable component="DataTable" />
 
 ## Changelog
 
