--- a/apps/docs/app/(docs)/components/date-input/page.mdx
+++ b/apps/docs/app/(docs)/components/date-input/page.mdx
@@ -1,5 +1,5 @@
 import { Demo } from "@/components/demo";
-import { components, PropsTable } from "@/components/props-table";
+import { PropsTable } from "@/components/props-table";
 
 # DateInput
 
@@ -15,7 +15,7 @@ Input field with calendar that lets user enter dates.
 
 ### Calendar
 
-<PropsTable component={components["DateInput"]} />
+<PropsTable component="DateInput" />
 
 ## Changelog
 
