--- a/apps/docs/app/(docs)/components/dialog/page.mdx
+++ b/apps/docs/app/(docs)/components/dialog/page.mdx
@@ -1,6 +1,6 @@
 import { Cards } from "@/components/cards";
 import { Demo } from "@/components/demo";
-import { components, PropsTable } from "@/components/props-table";
+import { PropsTable } from "@/components/props-table";
 import { Alert } from "@optiaxiom/react";
 import { Callout } from "nextra/components";
 
@@ -72,21 +72,21 @@ Use the `onOpenChange` handler to trigger the nested callback instead of an expl
 
 ### Dialog
 
-<PropsTable component={components["Dialog"]} />
+<PropsTable component="Dialog" />
 ### DialogTrigger
-<PropsTable component={components["DialogTrigger"]} />
+<PropsTable component="DialogTrigger" />
 ### DialogContent
-<PropsTable component={components["DialogContent"]} />
+<PropsTable component="DialogContent" />
 ### DialogHeader
-<PropsTable component={components["DialogHeader"]} />
+<PropsTable component="DialogHeader" />
 ### DialogForm
-<PropsTable component={components["DialogForm"]} />
+<PropsTable component="DialogForm" />
 ### DialogBody
-<PropsTable component={components["DialogBody"]} />
+<PropsTable component="DialogBody" />
 ### DialogFooter
-<PropsTable component={components["DialogFooter"]} />
+<PropsTable component="DialogFooter" />
 ### DialogClose
-<PropsTable component={components["DialogClose"]} />
+<PropsTable component="DialogClose" />
 
 ## Changelog
 
