--- a/apps/docs/app/(docs)/components/disclosure/page.mdx
+++ b/apps/docs/app/(docs)/components/disclosure/page.mdx
@@ -1,5 +1,5 @@
 import { Demo } from "@/components/demo";
-import { components, PropsTable } from "@/components/props-table";
+import { PropsTable } from "@/components/props-table";
 
 # Disclosure
 
@@ -26,15 +26,15 @@ Use the `chevronPosition` prop on `DisclosureTrigger` to control which side the 
 
 ### Disclosure
 
-<PropsTable component={components["Disclosure"]} />
+<PropsTable component="Disclosure" />
 
 ### DisclosureTrigger
 
-<PropsTable component={components["DisclosureTrigger"]} />
+<PropsTable component="DisclosureTrigger" />
 
 ### DisclosureContent
 
-<PropsTable component={components["DisclosureContent"]} />
+<PropsTable component="DisclosureContent" />
 
 ## Changelog
 
