--- a/apps/docs/app/(docs)/components/dropdown-menu/page.mdx
+++ b/apps/docs/app/(docs)/components/dropdown-menu/page.mdx
@@ -1,6 +1,6 @@
 import { Cards } from "@/components/cards";
 import { Demo } from "@/components/demo";
-import { components, PropsTable } from "@/components/props-table";
+import { PropsTable } from "@/components/props-table";
 
 # DropdownMenu
 
@@ -108,25 +108,25 @@ Make sure to enable `asChild` prop on `AlertDialogTrigger` and call `event.preve
 
 ### DropdownMenu
 
-<PropsTable component={components["DropdownMenu"]} />
+<PropsTable component="DropdownMenu" />
 ### DropdownMenuTrigger
-<PropsTable component={components["DropdownMenuTrigger"]} />
+<PropsTable component="DropdownMenuTrigger" />
 ### DropdownMenuContent
-<PropsTable component={components["DropdownMenuContent"]} />
+<PropsTable component="DropdownMenuContent" />
 ### DropdownMenuItem
-<PropsTable component={components["DropdownMenuItem"]} />
+<PropsTable component="DropdownMenuItem" />
 ### DropdownMenuLabel
-<PropsTable component={components["DropdownMenuLabel"]} />
+<PropsTable component="DropdownMenuLabel" />
 ### DropdownMenuGroup
-<PropsTable component={components["DropdownMenuGroup"]} />
+<PropsTable component="DropdownMenuGroup" />
 ### DropdownMenuSeparator
-<PropsTable component={components["DropdownMenuSeparator"]} />
+<PropsTable component="DropdownMenuSeparator" />
 ### DropdownMenuSub
-<PropsTable component={components["DropdownMenuSub"]} />
+<PropsTable component="DropdownMenuSub" />
 ### DropdownMenuSubTrigger
-<PropsTable component={components["DropdownMenuSubTrigger"]} />
+<PropsTable component="DropdownMenuSubTrigger" />
 ### DropdownMenuSubContent
-<PropsTable component={components["DropdownMenuSubContent"]} />
+<PropsTable component="DropdownMenuSubContent" />
 
 ## Changelog
 
