--- a/apps/docs/app/(docs)/components/field/page.mdx
+++ b/apps/docs/app/(docs)/components/field/page.mdx
@@ -1,5 +1,5 @@
 import { Demo } from "@/components/demo";
-import { components, PropsTable } from "@/components/props-table";
+import { PropsTable } from "@/components/props-table";
 
 # Field
 
@@ -45,7 +45,7 @@ Use the `info` prop to display a help icon with additional context for the input
 
 ### Field
 
-<PropsTable component={components["Field"]} />
+<PropsTable component="Field" />
 
 ## Changelog
 
