--- a/apps/docs/app/(docs)/components/flex/page.mdx
+++ b/apps/docs/app/(docs)/components/flex/page.mdx
@@ -1,6 +1,6 @@
 import { Cards } from "@/components/cards";
 import { Demo } from "@/components/demo";
-import { components, PropsTable } from "@/components/props-table";
+import { PropsTable } from "@/components/props-table";
 
 # Flex
 
@@ -44,7 +44,7 @@ Use `alignItems` and `justifyContent` prop to control the layout and alignment o
 
 ### Flex
 
-<PropsTable component={components["Flex"]} />
+<PropsTable component="Flex" />
 
 ## Changelog
 
