--- a/apps/docs/app/(docs)/components/grid/page.mdx
+++ b/apps/docs/app/(docs)/components/grid/page.mdx
@@ -1,6 +1,6 @@
 import { Cards } from "@/components/cards";
 import { Demo } from "@/components/demo";
-import { components, PropsTable } from "@/components/props-table";
+import { PropsTable } from "@/components/props-table";
 
 # Grid
 
@@ -34,7 +34,7 @@ Use the `gridColumn` prop on children to make them span across multiple columns.
 
 ### Grid
 
-<PropsTable component={components["Grid"]} />
+<PropsTable component="Grid" />
 
 ## Changelog
 
