--- a/apps/docs/app/(docs)/components/heading/page.mdx
+++ b/apps/docs/app/(docs)/components/heading/page.mdx
@@ -1,6 +1,6 @@
 import { Cards } from "@/components/cards";
 import { Demo } from "@/components/demo";
-import { components, PropsTable } from "@/components/props-table";
+import { PropsTable } from "@/components/props-table";
 
 # Heading
 
@@ -28,7 +28,7 @@ Combine the `level` prop with `asChild` to set the visual size while manually co
 
 ### Heading
 
-<PropsTable component={components["Heading"]} />
+<PropsTable component="Heading" />
 
 ## Changelog
 
