--- a/apps/docs/app/(docs)/components/indicator/page.mdx
+++ b/apps/docs/app/(docs)/components/indicator/page.mdx
@@ -1,5 +1,5 @@
 import { Demo } from "@/components/demo";
-import { components, PropsTable } from "@/components/props-table";
+import { PropsTable } from "@/components/props-table";
 
 # Indicator
 
@@ -33,7 +33,7 @@ Use the `disabled` prop to hide the badge.
 
 ### Indicator
 
-<PropsTable component={components["Indicator"]} />
+<PropsTable component="Indicator" />
 
 ## Changelog
 
