--- a/apps/docs/app/(docs)/components/inline-input/page.mdx
+++ b/apps/docs/app/(docs)/components/inline-input/page.mdx
@@ -1,6 +1,6 @@
 import { Callout } from "nextra/components";
 import { Demo } from "@/components/demo";
-import { components, PropsTable } from "@/components/props-table";
+import { PropsTable } from "@/components/props-table";
 import { Alert } from "@optiaxiom/react";
 
 # InlineInput
@@ -59,7 +59,7 @@ By default we re-use the `label` prop for empty placeholder - but this can be cu
 
 ### InlineInput
 
-<PropsTable component={components["InlineInput"]} />
+<PropsTable component="InlineInput" />
 
 ## Changelog
 
