--- a/apps/docs/app/(docs)/components/kbd/page.mdx
+++ b/apps/docs/app/(docs)/components/kbd/page.mdx
@@ -1,5 +1,5 @@
 import { Demo } from "@/components/demo";
-import { components, PropsTable } from "@/components/props-table";
+import { PropsTable } from "@/components/props-table";
 
 # Kbd
 
@@ -27,7 +27,7 @@ Use the `variant` prop to select between the different appearances.
 
 ### Kbd
 
-<PropsTable component={components["Kbd"]} />
+<PropsTable component="Kbd" />
 
 ## Changelog
 
