--- a/apps/docs/app/(docs)/components/link/page.mdx
+++ b/apps/docs/app/(docs)/components/link/page.mdx
@@ -1,5 +1,5 @@
 import { Demo } from "@/components/demo";
-import { components, PropsTable } from "@/components/props-table";
+import { PropsTable } from "@/components/props-table";
 
 # Link
 
@@ -39,7 +39,7 @@ Set `asChild` to `true` and wrap children in a `<button>` element to render link
 
 ### Link
 
-<PropsTable component={components["Link"]} />
+<PropsTable component="Link" />
 
 ## Changelog
 
