--- a/apps/docs/app/(docs)/components/page.mdx
+++ b/apps/docs/app/(docs)/components/page.mdx
@@ -1,6 +1,6 @@
 import { Cards } from "@/components/cards";
 import { Demo } from "@/components/demo";
-import { components, PropsTable } from "@/components/props-table";
+import { PropsTable } from "@/components/props-table";
 
 # Box
 
@@ -58,7 +58,7 @@ Button.displayName = "@optiaxiom/docs/Button";
 
 ### Box
 
-<PropsTable component={components["Box"]} />
+<PropsTable component="Box" />
 
 ## Changelog
 
