--- a/apps/docs/app/(docs)/components/popover/page.mdx
+++ b/apps/docs/app/(docs)/components/popover/page.mdx
@@ -1,5 +1,5 @@
 import { Demo } from "@/components/demo";
-import { components, PropsTable } from "@/components/props-table";
+import { PropsTable } from "@/components/props-table";
 
 # Popover
 
@@ -33,15 +33,15 @@ We can also completely change the trigger by using `asChild` and passing our own
 
 ### Popover
 
-<PropsTable component={components["Popover"]} />
+<PropsTable component="Popover" />
 
 ### PopoverTrigger
 
-<PropsTable component={components["PopoverTrigger"]} />
+<PropsTable component="PopoverTrigger" />
 
 ### PopoverContent
 
-<PropsTable component={components["PopoverContent"]} />
+<PropsTable component="PopoverContent" />
 
 ## Changelog
 
