--- a/apps/docs/app/(docs)/components/radio-group/page.mdx
+++ b/apps/docs/app/(docs)/components/radio-group/page.mdx
@@ -1,6 +1,6 @@
 import { Cards } from "@/components/cards";
 import { Demo } from "@/components/demo";
-import { components, PropsTable } from "@/components/props-table";
+import { PropsTable } from "@/components/props-table";
 
 # RadioGroup
 
@@ -50,11 +50,11 @@ Use the `description` prop to add helper text after the label.
 
 ### RadioGroup
 
-<PropsTable component={components["RadioGroup"]} />
+<PropsTable component="RadioGroup" />
 
 ### Radio
 
-<PropsTable component={components["Radio"]} />
+<PropsTable component="Radio" />
 
 ## Changelog
 
