--- a/apps/docs/app/(docs)/components/search-input/page.mdx
+++ b/apps/docs/app/(docs)/components/search-input/page.mdx
@@ -1,6 +1,6 @@
 import { Cards } from "@/components/cards";
 import { Demo } from "@/components/demo";
-import { components, PropsTable } from "@/components/props-table";
+import { PropsTable } from "@/components/props-table";
 
 # SearchInput
 
@@ -34,7 +34,7 @@ Use the `value` and `defaultValue` props to toggle between controlled and uncont
 
 ### SearchInput
 
-<PropsTable component={components["SearchInput"]} />
+<PropsTable component="SearchInput" />
 
 ## Changelog
 
