--- a/apps/docs/app/(docs)/components/segmented-control/page.mdx
+++ b/apps/docs/app/(docs)/components/segmented-control/page.mdx
@@ -1,6 +1,6 @@
 import { Cards } from "@/components/cards";
 import { Demo } from "@/components/demo";
-import { components, PropsTable } from "@/components/props-table";
+import { PropsTable } from "@/components/props-table";
 
 # SegmentedControl
 
@@ -30,11 +30,11 @@ Use the `value` and `defaultValue` props to toggle between controlled and uncont
 
 ### SegmentedControl
 
-<PropsTable component={components["SegmentedControl"]} />
+<PropsTable component="SegmentedControl" />
 
 ### SegmentedControlItem
 
-<PropsTable component={components["SegmentedControlItem"]} />
+<PropsTable component="SegmentedControlItem" />
 
 ## Changelog
 
