--- a/apps/docs/app/(docs)/components/select/page.mdx
+++ b/apps/docs/app/(docs)/components/select/page.mdx
@@ -1,6 +1,6 @@
 import { Cards } from "@/components/cards";
 import { Demo } from "@/components/demo";
-import { components, PropsTable } from "@/components/props-table";
+import { PropsTable } from "@/components/props-table";
 
 # Select
 
@@ -57,23 +57,23 @@ export default () => (
 
 ### Select
 
-<PropsTable component={components["Select"]} />
+<PropsTable component="Select" />
 ### SelectTrigger
-<PropsTable component={components["SelectTrigger"]} />
+<PropsTable component="SelectTrigger" />
 ### SelectValue
-<PropsTable component={components["SelectValue"]} />
+<PropsTable component="SelectValue" />
 ### SelectContent
-<PropsTable component={components["SelectContent"]} />
+<PropsTable component="SelectContent" />
 ### SelectItem
-<PropsTable component={components["SelectItem"]} />
+<PropsTable component="SelectItem" />
 ### SelectRadioItem
-<PropsTable component={components["SelectRadioItem"]} />
+<PropsTable component="SelectRadioItem" />
 ### SelectGroup
-<PropsTable component={components["SelectGroup"]} />
+<PropsTable component="SelectGroup" />
 ### SelectLabel
-<PropsTable component={components["SelectLabel"]} />
+<PropsTable component="SelectLabel" />
 ### SelectSeparator
-<PropsTable component={components["SelectSeparator"]} />
+<PropsTable component="SelectSeparator" />
 
 ## Changelog
 
