--- a/apps/docs/app/(docs)/components/separator/page.mdx
+++ b/apps/docs/app/(docs)/components/separator/page.mdx
@@ -1,7 +1,7 @@
 import { Callout } from "nextra/components";
 
 import { Demo } from "@/components/demo";
-import { components, PropsTable } from "@/components/props-table";
+import { PropsTable } from "@/components/props-table";
 import { Alert } from "@optiaxiom/react";
 
 # Separator
@@ -38,7 +38,7 @@ You can also use object or array prop notation to change orientation at various 
 
 ### Separator
 
-<PropsTable component={components["Separator"]} />
+<PropsTable component="Separator" />
 
 ## Changelog
 
