--- a/apps/docs/app/(docs)/components/sidebar/page.mdx
+++ b/apps/docs/app/(docs)/components/sidebar/page.mdx
@@ -1,5 +1,5 @@
 import { Demo } from "@/components/demo";
-import { components, PropsTable } from "@/components/props-table";
+import { PropsTable } from "@/components/props-table";
 
 # Sidebar
 
@@ -50,31 +50,31 @@ export default () => (
 
 ### Sidebar
 
-<PropsTable component={components["Sidebar"]} />
+<PropsTable component="Sidebar" />
 
 ### SidebarToggle
 
-<PropsTable component={components["SidebarToggle"]} />
+<PropsTable component="SidebarToggle" />
 
 ### NavHeader
 
-<PropsTable component={components["NavHeader"]} />
+<PropsTable component="NavHeader" />
 
 ### NavBody
 
-<PropsTable component={components["NavBody"]} />
+<PropsTable component="NavBody" />
 
 ### NavItem
 
-<PropsTable component={components["NavItem"]} />
+<PropsTable component="NavItem" />
 
 ### NavAccountItem
 
-<PropsTable component={components["NavAccountItem"]} />
+<PropsTable component="NavAccountItem" />
 
 ### NavFooter
 
-<PropsTable component={components["NavFooter"]} />
+<PropsTable component="NavFooter" />
 
 ## Changelog
 
