--- a/apps/docs/app/(docs)/components/skeleton/page.mdx
+++ b/apps/docs/app/(docs)/components/skeleton/page.mdx
@@ -1,6 +1,6 @@
 import { Cards } from "@/components/cards";
 import { Demo } from "@/components/demo";
-import { components, PropsTable } from "@/components/props-table";
+import { PropsTable } from "@/components/props-table";
 
 # Skeleton
 
@@ -36,7 +36,7 @@ Skeleton is automatically sized according to the parent `font-size`/`line-height
 
 ### Skeleton
 
-<PropsTable component={components["Skeleton"]} />
+<PropsTable component="Skeleton" />
 
 ## Changelog
 
