--- a/apps/docs/app/(docs)/components/spinner/page.mdx
+++ b/apps/docs/app/(docs)/components/spinner/page.mdx
@@ -1,6 +1,6 @@
 import { Cards } from "@/components/cards";
 import { Demo } from "@/components/demo";
-import { components, PropsTable } from "@/components/props-table";
+import { PropsTable } from "@/components/props-table";
 
 # Spinner
 
@@ -38,7 +38,7 @@ Set the `appearance` prop to `inverse` when displaying spinner on dark backgroun
 
 ### Spinner
 
-<PropsTable component={components["Spinner"]} />
+<PropsTable component="Spinner" />
 
 ## Changelog
 
