--- a/apps/docs/app/(docs)/components/switch/page.mdx
+++ b/apps/docs/app/(docs)/components/switch/page.mdx
@@ -1,6 +1,6 @@
 import { Cards } from "@/components/cards";
 import { Demo } from "@/components/demo";
-import { components, PropsTable } from "@/components/props-table";
+import { PropsTable } from "@/components/props-table";
 
 # Switch
 
@@ -44,7 +44,7 @@ Use the `checked` and `defaultChecked` props to toggle between controlled and un
 
 ### Switch
 
-<PropsTable component={components["Switch"]} />
+<PropsTable component="Switch" />
 
 ## Changelog
 
