--- a/apps/docs/app/(docs)/components/table/page.mdx
+++ b/apps/docs/app/(docs)/components/table/page.mdx
@@ -1,6 +1,6 @@
 import { Cards } from "@/components/cards";
 import { Demo } from "@/components/demo";
-import { components, PropsTable } from "@/components/props-table";
+import { PropsTable } from "@/components/props-table";
 
 # Table
 
@@ -49,17 +49,17 @@ export default () => (
 
 ### Table
 
-<PropsTable component={components["Table"]} />
+<PropsTable component="Table" />
 ### TableHeader
-<PropsTable component={components["TableHeader"]} />
+<PropsTable component="TableHeader" />
 ### TableHeaderCell
-<PropsTable component={components["TableHeaderCell"]} />
+<PropsTable component="TableHeaderCell" />
 ### TableBody
-<PropsTable component={components["TableBody"]} />
+<PropsTable component="TableBody" />
 ### TableRow
-<PropsTable component={components["TableRow"]} />
+<PropsTable component="TableRow" />
 ### TableCell
-<PropsTable component={components["TableCell"]} />
+<PropsTable component="TableCell" />
 
 ## Changelog
 
