--- a/apps/docs/app/(docs)/components/tabs/page.mdx
+++ b/apps/docs/app/(docs)/components/tabs/page.mdx
@@ -1,5 +1,5 @@
 import { Demo } from "@/components/demo";
-import { components, PropsTable } from "@/components/props-table";
+import { PropsTable } from "@/components/props-table";
 
 # Tabs
 
@@ -17,19 +17,19 @@ Use the `value` and `defaultValue` props to toggle between controlled and uncont
 
 ### Tabs
 
-<PropsTable component={components["Tabs"]} />
+<PropsTable component="Tabs" />
 
 ### TabsList
 
-<PropsTable component={components["TabsList"]} />
+<PropsTable component="TabsList" />
 
 ### TabsTrigger
 
-<PropsTable component={components["TabsTrigger"]} />
+<PropsTable component="TabsTrigger" />
 
 ### TabsContent
 
-<PropsTable component={components["TabsContent"]} />
+<PropsTable component="TabsContent" />
 
 ## Changelog
 
