--- a/apps/docs/app/(docs)/components/text/page.mdx
+++ b/apps/docs/app/(docs)/components/text/page.mdx
@@ -1,6 +1,6 @@
 import { Cards } from "@/components/cards";
 import { Demo } from "@/components/demo";
-import { components, PropsTable } from "@/components/props-table";
+import { PropsTable } from "@/components/props-table";
 
 # Text
 
@@ -42,7 +42,7 @@ Use the `lineClamp` prop to truncate the text at specific number of lines.
 
 ### Text
 
-<PropsTable component={components["Text"]} />
+<PropsTable component="Text" />
 
 ## Changelog
 
