--- a/apps/docs/app/(docs)/components/toast/page.mdx
+++ b/apps/docs/app/(docs)/components/toast/page.mdx
@@ -1,6 +1,6 @@
 import { Cards } from "@/components/cards";
 import { Demo } from "@/components/demo";
-import { components, PropsTable } from "@/components/props-table";
+import { PropsTable } from "@/components/props-table";
 
 # Toast
 
@@ -40,19 +40,19 @@ Use `toaster.remove()` to remove toasts. The `create()` method returns a unique 
 
 ### Toast
 
-<PropsTable component={components["Toast"]} />
+<PropsTable component="Toast" />
 
 ### ToastTitle
 
-<PropsTable component={components["ToastTitle"]} />
+<PropsTable component="ToastTitle" />
 
 ### ToastAction
 
-<PropsTable component={components["ToastAction"]} />
+<PropsTable component="ToastAction" />
 
 ### ToastProvider
 
-<PropsTable component={components["ToastProvider"]} />
+<PropsTable component="ToastProvider" />
 
 ## Changelog
 
