--- a/apps/docs/app/(docs)/components/toggle-button/page.mdx
+++ b/apps/docs/app/(docs)/components/toggle-button/page.mdx
@@ -1,6 +1,6 @@
 import { Cards } from "@/components/cards";
 import { Demo } from "@/components/demo";
-import { components, PropsTable } from "@/components/props-table";
+import { PropsTable } from "@/components/props-table";
 
 # ToggleButton
 
@@ -42,7 +42,7 @@ For accessibility please make sure to include text that explains why the button 
 
 ### ToggleButton
 
-<PropsTable component={components["ToggleButton"]} />
+<PropsTable component="ToggleButton" />
 
 ## Changelog
 
