--- a/apps/docs/app/(docs)/components/tooltip/page.mdx
+++ b/apps/docs/app/(docs)/components/tooltip/page.mdx
@@ -1,5 +1,5 @@
 import { Demo } from "@/components/demo";
-import { components, PropsTable } from "@/components/props-table";
+import { PropsTable } from "@/components/props-table";
 
 # Tooltip
 
@@ -33,9 +33,9 @@ Use the `side` and `align` props to control where the tooltip is placed by defau
 
 ### Tooltip
 
-<PropsTable component={components["Tooltip"]} />
+<PropsTable component="Tooltip" />
 ### TooltipProvider
-<PropsTable component={components["TooltipProvider"]} />
+<PropsTable component="TooltipProvider" />
 
 ## Changelog
 
