--- a/apps/docs/app/(docs)/components/input/page.mdx
+++ b/apps/docs/app/(docs)/components/input/page.mdx
@@ -1,6 +1,6 @@
 import { Cards } from "@/components/cards";
 import { Demo } from "@/components/demo";
-import { components, PropsTable } from "@/components/props-table";
+import { PropsTable } from "@/components/props-table";
 
 # Input
 
@@ -58,7 +58,7 @@ Use the `addonPointerEvents` prop to control whether clicking the addons focuses
 
 ### Input
 
-<PropsTable component={components["Input"]} />
+<PropsTable component="Input" />
 
 ## Changelog
 
