--- a/apps/docs/app/(docs)/components/modal-layer/page.mdx
+++ b/apps/docs/app/(docs)/components/modal-layer/page.mdx
@@ -1,5 +1,5 @@
 import { Demo } from "@/components/demo";
-import { components, PropsTable } from "@/components/props-table";
+import { PropsTable } from "@/components/props-table";
 
 # ModalLayer
 
@@ -19,7 +19,7 @@ All of our components automatically handle this focus management when being rend
 
 ### ModalLayer
 
-<PropsTable component={components["ModalLayer"]} />
+<PropsTable component="ModalLayer" />
 
 ## Changelog
 
