--- a/apps/docs/app/(docs)/components/pagination/page.mdx
+++ b/apps/docs/app/(docs)/components/pagination/page.mdx
@@ -1,6 +1,6 @@
 import { Cards } from "@/components/cards";
 import { Demo } from "@/components/demo";
-import { components, PropsTable } from "@/components/props-table";
+import { PropsTable } from "@/components/props-table";
 
 # Pagination
 
@@ -26,7 +26,7 @@ Use the `page` and `defaultPage` props to toggle between controlled and uncontro
 
 ### Pagination
 
-<PropsTable component={components["Pagination"]} />
+<PropsTable component="Pagination" />
 
 ## Changelog
 
