--- a/apps/docs/app/(docs)/components/progress/page.mdx
+++ b/apps/docs/app/(docs)/components/progress/page.mdx
@@ -1,6 +1,6 @@
 import { Cards } from "@/components/cards";
 import { Demo } from "@/components/demo";
-import { components, PropsTable } from "@/components/props-table";
+import { PropsTable } from "@/components/props-table";
 
 # Progress
 
@@ -20,7 +20,7 @@ Display feedback on status of task or length of a process.
 
 ### Progress
 
-<PropsTable component={components["Progress"]} />
+<PropsTable component="Progress" />
 
 ## Changelog
 
