--- a/apps/docs/app/(docs)/components/textarea/page.mdx
+++ b/apps/docs/app/(docs)/components/textarea/page.mdx
@@ -1,6 +1,6 @@
 import { Cards } from "@/components/cards";
 import { Demo } from "@/components/demo";
-import { components, PropsTable } from "@/components/props-table";
+import { PropsTable } from "@/components/props-table";
 
 # Textarea
 
@@ -86,7 +86,7 @@ Use the `addonPointerEvents` prop to control whether clicking blank spaces in th
 
 ### Textarea
 
-<PropsTable component={components["Textarea"]} />
+<PropsTable component="Textarea" />
 
 ## Changelog
 
