--- a/apps/docs/app/(docs)/guides/page.mdx
+++ b/apps/docs/app/(docs)/guides/page.mdx
@@ -16,7 +16,7 @@ npm install @optiaxiom/react
 
 ### Setup CSS imports
 
-Make sure to setup transpiling to handle [CSS Imports](/guides/css-imports).
+Make sure to configure your bundler to handle [CSS Imports](/guides/css-imports).
 
 ### Add global provider
 
