refactor disclosure trigger implementation
- fix icon when indicator is on right side
- combine with cover component to allow true interactive  addons
- add demo showcasing addons using pill
- remove z-index now that whole trigger has "position: relative"

--- a/apps/docs/app/(docs)/components/disclosure/page.mdx
+++ b/apps/docs/app/(docs)/components/disclosure/page.mdx
@@ -13,7 +13,7 @@ Use the `open` and `defaultOpen` props to toggle between controlled and uncontro
 
 <Demo component="disclosure/usage" />
 
-### Description
+### Indicator position
 
 Use the `chevronPosition` prop on `DisclosureTrigger` to control which side the chevron is placed.
 
@@ -21,6 +21,12 @@ Use the `chevronPosition` prop on `DisclosureTrigger` to control which side the 
   meta="/chevronPosition={chevronPosition}/"
   component="disclosure/chevron-position-usage"
 />
+
+### Addons
+
+Use the `addonBefore` and `addonAfter` prop to add icons, text, or any other interactive elements to the start or end of the trigger.
+
+<Demo component="disclosure/addon-usage" />
 
 ## Props
 
